# Paquete_test

./: pyproject.toml
edu_package_calc/: calc.py
