[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edu-package-calc"
version = "0.0.1"
authors = [
    { name="detena15", email="detena15@protonmail.com" },
]
description = "Ejemplo de como crear un paquete"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/detena15/Paquete_test"